tests/resource/valid/class/assign_with_generic.mamba
class MyClass[T]
    def f(x: T) -> T => x

def x := MyClass[Int]()
